--- a/apps/nerd_fonts/README
+++ b/apps/nerd_fonts/README
@@ -1,12 +1,6 @@
-Nerdfonts
----------
+Nerd font support:
+- download Nerd font ttf files and install them
 https://nerdfonts.com/
-
-Script
-------
-Script downloads Nerd font ttf files and install configuration file for the fontconfig
-which adds preference for the symbols from Nerd font for common fonts.
-
-Configuration file taken from
-https://github.com/ryanoasis/nerd-fonts/blob/master/10-nerd-font-symbols.conf
-and adjusted to support Hack font.
+- add fontconfig configuration for commons fonts to prefer symbols from Nerd font
+Configuration file taken from https://github.com/ryanoasis/nerd-fonts/blob/master/10-nerd-font-symbols.conf
+- add support for Hack font.
